--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,6 +1,21 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+
+
+ /* react select  */
+ .css-1xc3v61-indicatorContainer {
+   display: none !important;
+ }
+
+ .css-1u9des2-indicatorSeparator {
+   display: none !important;
+ }
+
+ .css-1xc3v61-indicatorContainer:focus {
+   display: none !important;
+ }
+
 @custom-variant dark (&:is(.dark *));
 
 :root {
